# octopy-energy

./: .gitignore  .pre-commit-config.yaml  AUTHORS  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yml  pytest.yml
octopy_energy/: __init__.py  graphql.py  rest.py
octopy_energy/__test__/: test_consumption.py  test_groupings.py
octopy_energy/tools/: electricity_consumption_and_tariff.py  electricity_reading.py  electricity_tariff.py
