# SPDX-FileCopyrightText: 2021 The octopy-energy Authors
#
# SPDX-License-Identifier: 0BSD

[metadata]
name = octopy-energy
description = Octopus Energy API client in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flameeyes/octopy-energy
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = Apache-2.0
license_files =
    AUTHORS
    LICENSE
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    aiohttp
    gql[aiohttp] ~= 3.0.0b0
    iso8601
python_requires = ~= 3.9

[options.extras_require]
dev =
    mypy
    pre-commit
    pytest-mypy
    pytest-timeout>=1.3.0
    pytest>=6.0
    setuptools_scm

[options.package_data]
* = py.typed

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
